test_regress/t/t_concat_large_bad.out
%Warning-WIDTHCONCAT: t/t_concat_large_bad.v:10:22: Replication of more that --replication-limit 8192 is suspect: 32768
                                                  : ... note: In instance 't'
   10 |   wire [32767:0] b = '0;
      |                      ^~
                      ... For warning description see https://verilator.org/warn/WIDTHCONCAT?v=latest
                      ... Use "/* verilator lint_off WIDTHCONCAT */" and lint_on around source to disable this message.
%Warning-WIDTHCONCAT: t/t_concat_large_bad.v:9:28: Replication of more that --replication-limit 8192 is suspect: 32768
                                                 : ... note: In instance 't'
    9 |   wire [32767:0] a = {32768{1'b1}};
      |                            ^
%Error: Exiting due to
